--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/marked/lib/marked.js"]
           },
           "configurations": {
             "production": {
